[project]
name = "cyberbullying-motifs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adbc-driver-postgresql>=1.6.0",
    "duckdb>=1.3.1",
    "igraph>=0.11.9",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "parquet>=1.3.1",
    "plotly>=6.1.2",
    "psycopg[binary]>=3.2.9",
    "pyarrow>=20.0.0",
    "pytz>=2025.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests", "integration_tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
